PR c++/81676 - bogus -Wunused warnings in constexpr if.

* semantics.c (maybe_mark_exp_read_r): New function.
	(finish_if_stmt): Call it on THEN_CLAUSE and ELSE_CLAUSE.

	* g++.dg/cpp1z/constexpr-if31.C: New test.
	* g++.dg/cpp1z/constexpr-if32.C: New test.

From-SVN: r274982